--- a/index.html
+++ b/index.html
@@ -1,171 +1,171 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <title>機械研TOP</title>
-  <link href="css/reset.css" rel="stylesheet" type="text/css">
-  <link href="css/css.css" rel="stylesheet" type="text/css">
-  <link href="topPageStyle.css" rel="stylesheet">
-  <link href="headerStyle.css" rel="stylesheet">
-  <link rel="stylesheet" href="footerStyle.css">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
+	<meta charset="UTF-8">
+	<title>機械研TOP</title>
+	<link href="css/reset.css" rel="stylesheet" type="text/css">
+	<link href="css/css.css" rel="stylesheet" type="text/css">
+	<link href="topPageStyle.css" rel="stylesheet">
+	<link href="headerStyle.css" rel="stylesheet">
+	<link rel="stylesheet" href="footerStyle.css">
+	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
 </head>
 
 <body>
-  <header>
-    <h1>京大機械研究会</h1>
-    <div class="bar_menu_box">
-      <div class="bar_menu">menu</div>
-      <ul>
-        <li class="bar_menu"><a href="index.html">TOP</a></li>
-        <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
-        <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
-        <li class="bar_menu"><a href="activities.html">活動内容</a></li>
-        <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
-        <li class="bar_menu"><a href="results.html">活動成績</a></li>
-      </ul>
-    </div>
-  </header>
+	<header>
+		<h1>京大機械研究会</h1>
+		<div class="bar_menu_box">
+			<div class="bar_menu">menu</div>
+			<ul>
+				<li class="bar_menu"><a href="index.html">TOP</a></li>
+				<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
+				<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
+				<li class="bar_menu"><a href="activities.html">活動内容</a></li>
+				<li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+				<li class="bar_menu"><a href="results.html">活動成績</a></li>
+			</ul>
+		</div>
+	</header>
 
-  <!--picture header. Please change photos-->
-  <div id="header">
-    <div id="header_box">
-      <p>京大機械研究会<br />
-        <span style="font-style: italic">Creators in Kyoto</span></p>
-    </div>
-  </div>
+	<!--picture header. Please change photos-->
+	<div id="header">
+		<div id="header_box">
+			<p>京大機械研究会<br />
+				<span style="font-style: italic">Creators in Kyoto</span></p>
+		</div>
+	</div>
 
-  <div class="container_100" style="margin:50px 0px">
-    <div class="box_line">
-      <p>京大機械研究会は京大で唯一のロボットサークルです。</p>
-      <p>
-        活動内容は、ロボット作成や電子工作、プログラミングなど様々です。<br />
-        ロボコンに出場したり、学祭に向けて自由に製作物 を作ったりと自由に活動を行うことができます。
-      </p>
-    </div>
-  </div>
+	<div class="container_100" style="margin:50px 0px">
+		<div class="box_line">
+			<p>京大機械研究会は京大で唯一のロボットサークルです。</p>
+			<p>
+				活動内容は、ロボット作成や電子工作、プログラミングなど様々です。<br />
+				ロボコンに出場したり、学祭に向けて自由に製作物 を作ったりと自由に活動を行うことができます。
+			</p>
+		</div>
+	</div>
 
-    <h3>最新情報</h3>
-  <div class="container_100" style="margin:50px 0px">
+		<h3>最新情報</h3>
+	<div class="container_100" style="margin:50px 0px">
 
-    <p>京大機械研はNHK学生ロボコンに15年振りに出場し、初優勝を収めることができました。その模様は7月15日(月・祝)(海の日)にNHK総合で放送されます</p>
-  </div>
+		<p>京大機械研はNHK学生ロボコンに15年振りに出場し、初優勝を収めることができました。その模様は7月15日(月・祝)(海の日)にNHK総合で放送されます</p>
+	</div>
 
-  <!--box menu-->
-  <div class="container_100">
-    <a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
-      <p class="mini_box">新歓情報</p>
-      <a/>
-      <a href="introduction.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/tracers.jpg)">
-        <p class="mini_box">サークル紹介</p>
-      </a>
-  </div>
+	<!--box menu-->
+	<div class="container_100">
+		<a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
+			<p class="mini_box">新歓情報</p>
+			<a/>
+			<a href="introduction.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/tracers.jpg)">
+				<p class="mini_box">サークル紹介</p>
+			</a>
+	</div>
 
-  <div class="container_100">
-    <a href="activities.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/peacockRobo.jpg)">
-      <p class="mini_box">活動内容</p>
-    </a>
-    <a href="members.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/member.jpg)">
-      <p class="mini_box">メンバー紹介</p>
-    </a>
-  </div>
+	<div class="container_100">
+		<a href="activities.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/peacockRobo.jpg)">
+			<p class="mini_box">活動内容</p>
+		</a>
+		<a href="members.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/member.jpg)">
+			<p class="mini_box">メンバー紹介</p>
+		</a>
+	</div>
 
-  <!--New Topics. Please update frequently!!-->
-  <div class="new_info">
-    <p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
-    <ul>
-      <li>
+	<!--New Topics. Please update frequently!!-->
+	<div class="new_info">
+		<p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
+		<ul>
+			<li>
 	<div class="date">2019/06/02</div>
 	<div class="info_title"><a href="activities.html">NHKロボコン2019初優勝しました。</a></div>
-      </li>
-      <li>
-        <div class="date">2019/04/08</div>
-        <div class="info_title"><a href="forFreshmans.html">新歓情報を更新しました。</a></div>
-      </li>
-      <li>
-        <div class="date">2019/03/10</div>
-        <div class="info_title"><a href="forFreshmans.html">新歓情報を更新しました。</a></div>
-      </li>
-      <li>
-        <div class="date">2018/08/11</div>
-        <div class="info_title"><a href="activities.html">活動内容を更新しました。2018年キャチロボバトルコンテスト</a></div>
-      </li>
-      <li>
-        <div class="date">2018/03/20</div>
-        <div class="info_title">メンバー紹介を更新しました。</div>
-      </li>
-      <li>
-        <div class="date">2018/02/25</div>
-        <span class="info_title">追いコンがありました。</span>
-      </li>
-      <li>
-        <div class="date">2018/02/13</div>
-        <span class="info_title">新歓ロボ始動!!</span>
-      </li>
-      <li>
-        <div class="date">2018/02/13</div>
-        <div class="info_title">新webページが完成しました。</div>
-      </li>
-    </ul>
-  </div>
+			</li>
+			<li>
+				<div class="date">2019/04/08</div>
+				<div class="info_title"><a href="forFreshmans.html">新歓情報を更新しました。</a></div>
+			</li>
+			<li>
+				<div class="date">2019/03/10</div>
+				<div class="info_title"><a href="forFreshmans.html">新歓情報を更新しました。</a></div>
+			</li>
+			<li>
+				<div class="date">2018/08/11</div>
+				<div class="info_title"><a href="activities.html">活動内容を更新しました。2018年キャチロボバトルコンテスト</a></div>
+			</li>
+			<li>
+				<div class="date">2018/03/20</div>
+				<div class="info_title">メンバー紹介を更新しました。</div>
+			</li>
+			<li>
+				<div class="date">2018/02/25</div>
+				<span class="info_title">追いコンがありました。</span>
+			</li>
+			<li>
+				<div class="date">2018/02/13</div>
+				<span class="info_title">新歓ロボ始動!!</span>
+			</li>
+			<li>
+				<div class="date">2018/02/13</div>
+				<div class="info_title">新webページが完成しました。</div>
+			</li>
+		</ul>
+	</div>
 
-  <footer>
-    <!--social icons menu-->
-    <div id="footer_box">
-      <div id="social_icons">
-        <a href="https://www.youtube.com/user/kikaiken">
-        <i class="fab fa-youtube faa-tada animated-hover"></i>
-      </a>
-        <a href="https://twitter.com/mechatrocreator">
-        <i class="fab fa-twitter faa-tada animated-hover"></i>
-      </a>
-        <a href="#"> <!--insert facebook acconut-->
-        <i class="fab fa-facebook faa-tada animated-hover"></i>
-      </a>
-        <a href="http://kikaiken.blogspot.jp/">
-        <i class="fab fa-blogger faa-tada animated-hover"></i>
-      </a>
-        <a href="https://github.com/kikaiken">
-        <i class="fab fa-github faa-tada animated-hover"></i>
-      </a>
-      </div>
+	<footer>
+		<!--social icons menu-->
+		<div id="footer_box">
+			<div id="social_icons">
+				<a href="https://www.youtube.com/user/kikaiken">
+				<i class="fab fa-youtube faa-tada animated-hover"></i>
+			</a>
+				<a href="https://twitter.com/mechatrocreator">
+				<i class="fab fa-twitter faa-tada animated-hover"></i>
+			</a>
+				<a href="#"> <!--insert facebook acconut-->
+				<i class="fab fa-facebook faa-tada animated-hover"></i>
+			</a>
+				<a href="http://kikaiken.blogspot.jp/">
+				<i class="fab fa-blogger faa-tada animated-hover"></i>
+			</a>
+				<a href="https://github.com/kikaiken">
+				<i class="fab fa-github faa-tada animated-hover"></i>
+			</a>
+			</div>
 
-      <!--contents-->
-      <div class="siteMap_box">
-        <p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
-        <ul>
-          <li><a href="index.html">TOP</a></li>
-          <li><a href="forFreshmans.html">新歓情報</a></li>
-          <li><a href="introduction.html">サークル紹介</a></li>
-          <li><a href="activities.html">活動内容</a></li>
-          <li><a href="members.html">メンバー紹介</a></li>
-          <li><a href="results.html">活動成績</a></li>
-        </ul>
-      </div>
+			<!--contents-->
+			<div class="siteMap_box">
+				<p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
+				<ul>
+					<li><a href="index.html">TOP</a></li>
+					<li><a href="forFreshmans.html">新歓情報</a></li>
+					<li><a href="introduction.html">サークル紹介</a></li>
+					<li><a href="activities.html">活動内容</a></li>
+					<li><a href="members.html">メンバー紹介</a></li>
+					<li><a href="results.html">活動成績</a></li>
+				</ul>
+			</div>
 
-      <!--siteMap-->
-      <div class="siteMap_box">
-        <p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
-        <ul>
-          <li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
-          <li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
-          <li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
-        </ul>
-      </div>
+			<!--siteMap-->
+			<div class="siteMap_box">
+				<p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
+				<ul>
+					<li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
+					<li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
+					<li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
+				</ul>
+			</div>
 
-      <!--contact us-->
-      <div class="Qbox">
-        <p>
-          <i class="far fa-envelope fa-color: white fa-fw"></i>
-          Contact us<br/>kikaiken@gmail.com
-        </p>
-      </div>
+			<!--contact us-->
+			<div class="Qbox">
+				<p>
+					<i class="far fa-envelope fa-color: white fa-fw"></i>
+					Contact us<br/>kikaiken@gmail.com
+				</p>
+			</div>
 
-      <address>Copyright(C)2019 kikaiken Allright Reserved.</address>
-    </div>
-  </footer>
+			<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
+		</div>
+	</footer>
 </body>
 
 </html>
