--- a/activities.html
+++ b/activities.html
@@ -1,183 +1,183 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <title>機械研活動内容</title>
-  <link href="css/reset.css" rel="stylesheet" type="text/css">
-  <link href="css/css.css" rel="stylesheet" type="text/css">
-  <link href="webPageStyle.css" rel="stylesheet">
-  <link href="headerStyle.css" rel="stylesheet">
-  <link rel="stylesheet" href="footerStyle.css">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
+	<meta charset="UTF-8">
+	<title>機械研活動内容</title>
+	<link href="css/reset.css" rel="stylesheet" type="text/css">
+	<link href="css/css.css" rel="stylesheet" type="text/css">
+	<link href="webPageStyle.css" rel="stylesheet">
+	<link href="headerStyle.css" rel="stylesheet">
+	<link rel="stylesheet" href="footerStyle.css">
+	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
 </head>
 
 <body>
-  <header>
-    <h1>京大機械研究会</h1>
-    <div class="bar_menu_box">
-      <div class="bar_menu">menu</div>
-      <ul>
-        <li class="bar_menu"><a href="index.html">TOP</a></li>
-        <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
-        <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
-        <li class="bar_menu"><a href="activities.html">活動内容</a></li>
-        <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
-        <li class="bar_menu"><a href="results.html">活動成績</a></li>
-      </ul>
-    </div>
-  </header>
+	<header>
+		<h1>京大機械研究会</h1>
+		<div class="bar_menu_box">
+			<div class="bar_menu">menu</div>
+			<ul>
+				<li class="bar_menu"><a href="index.html">TOP</a></li>
+				<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
+				<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
+				<li class="bar_menu"><a href="activities.html">活動内容</a></li>
+				<li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+				<li class="bar_menu"><a href="results.html">活動成績</a></li>
+			</ul>
+		</div>
+	</header>
 
-  <div id="header">
-    <div id="header_box">
-      <p>京大機械研究会<br />
-        <span style="font-style: italic">Activities</span></p>
-    </div>
-  </div>
+	<div id="header">
+		<div id="header_box">
+			<p>京大機械研究会<br />
+				<span style="font-style: italic">Activities</span></p>
+		</div>
+	</div>
 
-  <div class="wrapper">
-    <div class="cover">
-      <div class="content">
-        <h2>新歓</h2>
-        <p>機械研では4~5月にかけて、新歓を行っています。もちろん、新歓期以外の入会も大歓迎です!!<br/> 新歓情報は別ページ詳しく記載していますのでそちらをご覧ください。
-        </p>
-        <p style="text-align: right">新歓情報→<a class="link_button" href="forFreshmans.html">Check!!</a></p>
+	<div class="wrapper">
+		<div class="cover">
+			<div class="content">
+				<h2>新歓</h2>
+				<p>機械研では4~5月にかけて、新歓を行っています。もちろん、新歓期以外の入会も大歓迎です!!<br/> 新歓情報は別ページ詳しく記載していますのでそちらをご覧ください。
+				</p>
+				<p style="text-align: right">新歓情報→<a class="link_button" href="forFreshmans.html">Check!!</a></p>
 
-        <h2>ロボコン</h2>
+				<h2>ロボコン</h2>
 	<h3>NHKロボコン</h3>
 	<p>機械研究会はこれまでNHKロボコンにはほとんど出場していませんでしたが、この度2019年度に15年ぶりに出場しました。そして、初優勝することができました。8月25日にモンゴルで開かれるABUロボコンに日本を代表して出場することになります。NHKロボコン2019での機械研究会の活躍については7月15日に放送されるNHKロボコンのほうをご確認ください。
 	</p>
 	<h4>2019年</h4>
 	<p></p>
 	<img src="./dataFolder/MR1.jpg" alt="NHK2019">
-        <h3>キャチロボバトルコンテスト</h3>
-        <p> キャチロボバトルコンテストは、京都製作所が主催し、学生が「ものづくり」に 取り組む姿勢を応援するために行われているロボコンです。毎年、課題のお菓子を運搬し、 規定のルールに従い点数で競う競技です。機械研究会は、このキャチロボで2015年、2017年に 準優勝をはたしています。
-        </p>
-        <h4>2016年</h4>
-        <p>ワークは亀田製菓の手塩屋。左右についている大きなハンドで一気に運ぶ姿がかっこ良いです。</p>
+				<h3>キャチロボバトルコンテスト</h3>
+				<p> キャチロボバトルコンテストは、京都製作所が主催し、学生が「ものづくり」に 取り組む姿勢を応援するために行われているロボコンです。毎年、課題のお菓子を運搬し、 規定のルールに従い点数で競う競技です。機械研究会は、このキャチロボで2015年、2017年に 準優勝をはたしています。
+				</p>
+				<h4>2016年</h4>
+				<p>ワークは亀田製菓の手塩屋。左右についている大きなハンドで一気に運ぶ姿がかっこ良いです。</p>
 
-        <!--picture quality is poor-->
-        <img src="./dataFolder/catchRobo2016.jpg" alt="catchRobo2016">
-        <h4>2017年</h4>
-        <p>ワークは森永製菓のMARIEビスケット。それぞれ独立した吸引機構により華麗なハンドリングが可能です。</p>
-        <img src="./dataFolder/picture_2017.jpg" alt="catchRobo2017">
-        <h4>2018年</h4>
-        <p>ワークはグリコのカプリコ。2台の円筒形ハンドや一個鳥、共通エリアのカプリコを回収するカプリコなど、
-        様々な機構が組み合わさっています。</p>
-        <img src="./dataFolder/catch_2018.jpg" alt="catchRobo2018">
+				<!--picture quality is poor-->
+				<img src="./dataFolder/catchRobo2016.jpg" alt="catchRobo2016">
+				<h4>2017年</h4>
+				<p>ワークは森永製菓のMARIEビスケット。それぞれ独立した吸引機構により華麗なハンドリングが可能です。</p>
+				<img src="./dataFolder/picture_2017.jpg" alt="catchRobo2017">
+				<h4>2018年</h4>
+				<p>ワークはグリコのカプリコ。2台の円筒形ハンドや一個鳥、共通エリアのカプリコを回収するカプリコなど、
+				様々な機構が組み合わさっています。</p>
+				<img src="./dataFolder/catch_2018.jpg" alt="catchRobo2018">
 
-        <h3>マイクロマウス</h3>
-        <p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
-        </p>
-        <h4>マイクロマウス</h4>
+				<h3>マイクロマウス</h3>
+				<p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
+				</p>
+				<h4>マイクロマウス</h4>
 	<p>
 	マイクロマウス競技では、最大32×32マスの広大な迷路を手のひらサイズのロボットが自律的に探索します。ロボットは、最初は壁がどこにあるのかを知らない状態で探索を行い、迷路を記憶していきます。そして、迷路の記憶が完了した後、ゴールへの最短経路を走る高速走行にトライします。
 	</p>
-        <h4>ロボトレース</h4>
+				<h4>ロボトレース</h4>
 
-        <h3>関西合同ロボコン</h3>
-        <p>関西合同ロボコンとは、私たち京都大学や大阪大学、立命館大学、京都工芸繊維大学の技術系サークル が集まって行われるロボコンです。競技内容はロボトレースで競い合い、他大学の技術系サークルとの 交流をしています。
-        </p>
+				<h3>関西合同ロボコン</h3>
+				<p>関西合同ロボコンとは、私たち京都大学や大阪大学、立命館大学、京都工芸繊維大学の技術系サークル が集まって行われるロボコンです。競技内容はロボトレースで競い合い、他大学の技術系サークルとの 交流をしています。
+				</p>
 
-        <h2>NF(学園祭)</h2>
-        <p>機械研究会はNFで毎年、自分たちが製作したものを教室で展示しています。<br /> ここでは、毎年定番の展示物を紹介します。また、先ほど紹介したキャチロボ、マイクロマウス の展示や個人の製作物も多々展示されるので是非見に来てください。
-        </p>
-        <h3>巨大UFOキャッチャー</h3>
-        <p>機械研名物の巨大UFOキャッチャー。これは見に来るしかない！</p>
-        <!--picture quality is poor-->
-        <img src="./dataFolder/UFOcatcher.jpg" alt="Load Failed">
-        <h3>イライラ棒</h3>
-        <p>懐かしのイライラ棒が機械研員によってリバイバル！<br /> 毎年大盛況です。
-        </p>
-        <!--picture quality is poor-->
-        <img src="./dataFolder/irairaStick.jpg" alt="Load Failed">
+				<h2>NF(学園祭)</h2>
+				<p>機械研究会はNFで毎年、自分たちが製作したものを教室で展示しています。<br /> ここでは、毎年定番の展示物を紹介します。また、先ほど紹介したキャチロボ、マイクロマウス の展示や個人の製作物も多々展示されるので是非見に来てください。
+				</p>
+				<h3>巨大UFOキャッチャー</h3>
+				<p>機械研名物の巨大UFOキャッチャー。これは見に来るしかない！</p>
+				<!--picture quality is poor-->
+				<img src="./dataFolder/UFOcatcher.jpg" alt="Load Failed">
+				<h3>イライラ棒</h3>
+				<p>懐かしのイライラ棒が機械研員によってリバイバル！<br /> 毎年大盛況です。
+				</p>
+				<!--picture quality is poor-->
+				<img src="./dataFolder/irairaStick.jpg" alt="Load Failed">
 
-        <h2>新歓ロボ</h2>
-        <p>機械研究会では、自分たちの技術力向上や新入生を快く迎え入れることを目的に 新歓ロボと称して、新二回生が主体となり一つの大型のロボットを製作しています。
-        </p>
-        <h3>2018年新歓ロボ</h3> 2018年度新歓ロボは以下の二つを製作しました。
-        <h4>広告塔ロボ</h4>
-        <img src="./dataFolder/koukokutou.JPG" alt="Load Failed">
-        <h4>画伯</h4>
-        <img src="./dataFolder/gahaku.jpg" alt="Load Failed">
-        <h3>2019年新歓ロボ</h3>
-        <p>2019年度新歓ロボは以下の二つです</p>
+				<h2>新歓ロボ</h2>
+				<p>機械研究会では、自分たちの技術力向上や新入生を快く迎え入れることを目的に 新歓ロボと称して、新二回生が主体となり一つの大型のロボットを製作しています。
+				</p>
+				<h3>2018年新歓ロボ</h3> 2018年度新歓ロボは以下の二つを製作しました。
+				<h4>広告塔ロボ</h4>
+				<img src="./dataFolder/koukokutou.JPG" alt="Load Failed">
+				<h4>画伯</h4>
+				<img src="./dataFolder/gahaku.jpg" alt="Load Failed">
+				<h3>2019年新歓ロボ</h3>
+				<p>2019年度新歓ロボは以下の二つです</p>
 	<h4>リコーダーロボット</h4>
 	<img src="./dataFolder/ricoder.jpg" alt="Load Failed">
 
-      </div>
-    </div>
+			</div>
+		</div>
 
-    <div class="side_bar">
-      <img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
-      <div class="social_bar" style=".social_bar a:hover i {color: red;}">
-        <a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
-      </div>
-      <div class="social_bar">
-        <a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
-      </div>
-      <div class="social_bar">
-        <a href="#"><i class="fab fa-facebook"></i>Facebook</a>
-      </div>
-      <div class="social_bar">
-        <a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
-      </div>
-      <div class="social_bar">
-        <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
-      </div>
-    </div>
-  </div>
+		<div class="side_bar">
+			<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
+			<div class="social_bar" style=".social_bar a:hover i {color: red;}">
+				<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
+			</div>
+			<div class="social_bar">
+				<a href="#"><i class="fab fa-facebook"></i>Facebook</a>
+			</div>
+			<div class="social_bar">
+				<a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
+			</div>
+		</div>
+	</div>
 
-  <footer>
-    <div id="footer_box">
-      <div id="social_icons">
-        <a href="https://www.youtube.com/user/kikaiken">
-          <i class="fab fa-youtube faa-tada animated-hover"></i>
-        </a>
-        <a href="https://twitter.com/mechatrocreator">
-          <i class="fab fa-twitter faa-tada animated-hover"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-facebook faa-tada animated-hover"></i>
-        </a>
-        <a href="http://kikaiken.blogspot.jp/">
-          <i class="fab fa-blogger faa-tada animated-hover"></i>
-        </a>
-        <a href="https://github.com/kikaiken">
-          <i class="fab fa-github faa-tada animated-hover"></i>
-        </a>
-      </div>
+	<footer>
+		<div id="footer_box">
+			<div id="social_icons">
+				<a href="https://www.youtube.com/user/kikaiken">
+					<i class="fab fa-youtube faa-tada animated-hover"></i>
+				</a>
+				<a href="https://twitter.com/mechatrocreator">
+					<i class="fab fa-twitter faa-tada animated-hover"></i>
+				</a>
+				<a href="#">
+					<i class="fab fa-facebook faa-tada animated-hover"></i>
+				</a>
+				<a href="http://kikaiken.blogspot.jp/">
+					<i class="fab fa-blogger faa-tada animated-hover"></i>
+				</a>
+				<a href="https://github.com/kikaiken">
+					<i class="fab fa-github faa-tada animated-hover"></i>
+				</a>
+			</div>
 
-      <div class="siteMap_box">
-        <p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
-        <ul>
-          <li><a href="index.html">TOP</a></li>
-          <li><a href="forFreshmans.html">新歓情報</a></li>
-          <li><a href="introduction.html">サークル紹介</a></li>
-          <li><a href="activities.html">活動内容</a></li>
-          <li><a href="members.html">メンバー紹介</a></li>
-          <li><a href="results.html">活動成績</a></li>
-        </ul>
-      </div>
+			<div class="siteMap_box">
+				<p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
+				<ul>
+					<li><a href="index.html">TOP</a></li>
+					<li><a href="forFreshmans.html">新歓情報</a></li>
+					<li><a href="introduction.html">サークル紹介</a></li>
+					<li><a href="activities.html">活動内容</a></li>
+					<li><a href="members.html">メンバー紹介</a></li>
+					<li><a href="results.html">活動成績</a></li>
+				</ul>
+			</div>
 
-      <div class="siteMap_box">
-        <p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
-        <ul>
-          <li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
-          <li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
-          <li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
-        </ul>
-      </div>
+			<div class="siteMap_box">
+				<p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
+				<ul>
+					<li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
+					<li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
+					<li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
+				</ul>
+			</div>
 
-      <div class="Qbox">
-        <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
-        </p>
-      </div>
+			<div class="Qbox">
+				<p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
+				</p>
+			</div>
 
-      <address>Copyright(C)2019 kikaiken Allright Reserved.</address>
-    </div>
-  </footer>
+			<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
+		</div>
+	</footer>
 </body>
 
 </html>
