--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -75,7 +75,7 @@
 
 			<div class="side_bar">
 				<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
-				<div class="social_bar" style=".social_bar a:hover i {color: red;}">
+				<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
 					<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
 				</div>
 				<div class="social_bar">
