--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<div class="Qbox">
 				<p>
 					<i class="far fa-envelope fa-color: white fa-fw"></i>
-					Contact us<br/>kikaiken@gmail.com
+					Contact us<br/>kikaiken[at]gmail.com
 				</p>
 			</div>
 
