--- a/introduction.html
+++ b/introduction.html
@@ -125,7 +125,8 @@
 			</div>
 
 			<div class="Qbox">
-				<p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
+				<p><i class="far fa-envelope fa-color: white fa-fw"></i>
+					Contact us<br/> 　kikaiken[at]gmail.com
 				</p>
 			</div>
 
