--- a/members.html
+++ b/members.html
@@ -123,8 +123,8 @@
 			</div>
 
 			<div class="Qbox">
-				<p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/>
-					　kikaiken@gmail.com
+				<p><i class="far fa-envelope fa-color: white fa-fw"></i>
+					Contact us<br/>kikaiken[at]gmail.com
 				</p>
 				<!--
 				<p>　</p>
