#delete member intro

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -23,7 +23,7 @@
 					<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
 					<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
 					<li class="bar_menu"><a href="activities.html">活動内容</a></li>
-					<li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+					<!-- <li class="bar_menu"><a href="members.html">メンバー紹介</a></li> -->
 					<li class="bar_menu"><a href="results.html">活動成績</a></li>
 				</ul>
 			</div>
@@ -120,7 +120,7 @@
 						<li><a href="forFreshmans.html">新歓情報</a></li>
 						<li><a href="introduction.html">サークル紹介</a></li>
 						<li><a href="activities.html">活動内容</a></li>
-						<li><a href="members.html">メンバー紹介</a></li>
+						<!-- <li><a href="members.html">メンバー紹介</a></li> -->
 						<li><a href="results.html">活動成績</a></li>
 					</ul>
 				</div>
