#add twitter gitlab header-link

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -13,136 +13,142 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
 </head>
 
-	<body>
-		<header>
-			<h1>京大機械研究会</h1>
-			<div class="bar_menu_box">
-				<div class="bar_menu">menu</div>
+<body>
+	<header>
+		<h1><a href="index.html">京大機械研究会</a></h1>
+		<div class="bar_menu_box">
+			<div class="bar_menu">menu</div>
+			<ul>
+				<li class="bar_menu"><a href="index.html">TOP</a></li>
+				<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
+				<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
+				<li class="bar_menu"><a href="activities.html">活動内容</a></li>
+				<!-- <li class="bar_menu"><a href="members.html">メンバー紹介</a></li> -->
+				<li class="bar_menu"><a href="results.html">活動成績</a></li>
+			</ul>
+		</div>
+	</header>
+
+	<div id="header">
+		<div id="header_box">
+			<p>京大機械研究会<br />
+				<span style="font-style: italic">Welcome Event</span></p>
+		</div>
+	</div>
+
+	<div class="wrapper">
+		<div class="cover">
+			<div class="content">
+
+				<h2>2019年度新歓期カレンダー</h2>
+				<p>今年の機械研の新歓イベントスケジュールです！</p>
+				<iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="670" height="540" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+				<p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p>
+
+				<h2>サークル紹介</h2>
+				<p>私たちは、京都大学機械研究会という大学公認サークルです。</p>
+				<p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
+				</p>
+				<p>皆で楽しくものづくりライフを楽しみましょう!!</p>
+				<div class="balloon_rb">
+					<p>未経験者も大歓迎！</p>
+				</div>
+
+				<h2>活動場所</h2>
+				<p>京都大学吉田キャンパスの西部棟(ルネの横)のC105で春休み中は毎日午後を中心に活動しています。</p>
+
+				<h2>よくある質問</h2>
+				<div class="question" style="width: 317px">会費はどれくらいかかりますか？</div>
+				<p class="ans">半期5000円です。結構安い!!</p>
+
+				<div class="question" style="width: 318px">本当に初心者でも大丈夫なの？</div>
+				<p class="ans">もちろん大丈夫です!! 4~5月は新入生講習があります。 7月に新入生ロボコンもあるのでそこでスキルアップもできますよ。
+				</p>
+
+				<div class="question" style="width: 248px">文系でも大丈夫ですか？</div>
+				<p class="ans">もちろんです。意欲のある方ならだれでも歓迎です!!</p>
+
+	<div class="question" style="width: 320px">京大生以外でも大丈夫ですか？</div>
+				<p class="ans">過去にも京大生以外の方も参加し活動されてました。メカ好きな人達には大学なんか関係ありません！</p>
+			</div>
+		</div>
+
+		<div class="side_bar">
+			<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
+			<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
+				<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
+			</div>
+			<div class="social_bar">
+				<a href="#"><i class="fab fa-facebook"></i>Facebook</a>
+			</div>
+			<div class="social_bar">
+				<a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://gitlab.com/kikaiken"><i class="fab fa-gitlab"></i>Gitlab</a>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		<div id="footer_box">
+			<div id="social_icons">
+				<a href="https://www.youtube.com/user/kikaiken">
+				<i class="fab fa-youtube faa-tada animated-hover"></i>
+			</a>
+				<a href="https://twitter.com/mechatrocreator">
+				<i class="fab fa-twitter faa-tada animated-hover"></i>
+			</a>
+				<a href="#">
+				<i class="fab fa-facebook faa-tada animated-hover"></i>
+			</a>
+				<a href="http://kikaiken.blogspot.jp/">
+				<i class="fab fa-blogger faa-tada animated-hover"></i>
+			</a>
+				<a href="https://github.com/kikaiken">
+				<i class="fab fa-github faa-tada animated-hover"></i>
+			</a>
+			<a href="https://gitlab.com/kikaiken">
+				<i class="fab fa-gitlab faa-tada animated-hover"></i>
+			</a>
+		</div>
+
+			<div class="siteMap_box">
+				<p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
 				<ul>
-					<li class="bar_menu"><a href="index.html">TOP</a></li>
-					<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
-					<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
-					<li class="bar_menu"><a href="activities.html">活動内容</a></li>
-					<!-- <li class="bar_menu"><a href="members.html">メンバー紹介</a></li> -->
-					<li class="bar_menu"><a href="results.html">活動成績</a></li>
+					<li><a href="index.html">TOP</a></li>
+					<li><a href="forFreshmans.html">新歓情報</a></li>
+					<li><a href="introduction.html">サークル紹介</a></li>
+					<li><a href="activities.html">活動内容</a></li>
+					<!-- <li><a href="members.html">メンバー紹介</a></li> -->
+					<li><a href="results.html">活動成績</a></li>
 				</ul>
 			</div>
-		</header>
 
-		<div id="header">
-			<div id="header_box">
-				<p>京大機械研究会<br />
-					<span style="font-style: italic">Welcome Event</span></p>
+			<div class="siteMap_box">
+				<p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
+				<ul>
+					<li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
+					<li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
+					<li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
+				</ul>
 			</div>
+
+			<div class="Qbox">
+				<p><i class="far fa-envelope fa-color: white fa-fw"></i>
+					Contact us<br/>kikaiken[at]gmail.com
+				</p>
+			</div>
+
+			<address>Copyright(C)2020 kikaiken Allright Reserved.</address>
 		</div>
-
-		<div class="wrapper">
-			<div class="cover">
-				<div class="content">
-
-					<h2>2019年度新歓期カレンダー</h2>
-					<p>今年の機械研の新歓イベントスケジュールです！</p>
-					<iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="670" height="540" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
-					<p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p>
-
-					<h2>サークル紹介</h2>
-					<p>私たちは、京都大学機械研究会という大学公認サークルです。</p>
-					<p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
-					</p>
-					<p>皆で楽しくものづくりライフを楽しみましょう!!</p>
-					<div class="balloon_rb">
-						<p>未経験者も大歓迎！</p>
-					</div>
-
-					<h2>活動場所</h2>
-					<p>京都大学吉田キャンパスの西部棟(ルネの横)のC105で春休み中は毎日午後を中心に活動しています。</p>
-
-					<h2>よくある質問</h2>
-					<div class="question" style="width: 317px">会費はどれくらいかかりますか？</div>
-					<p class="ans">半期5000円です。結構安い!!</p>
-
-					<div class="question" style="width: 318px">本当に初心者でも大丈夫なの？</div>
-					<p class="ans">もちろん大丈夫です!! 4~5月は新入生講習があります。 7月に新入生ロボコンもあるのでそこでスキルアップもできますよ。
-					</p>
-
-					<div class="question" style="width: 248px">文系でも大丈夫ですか？</div>
-					<p class="ans">もちろんです。意欲のある方ならだれでも歓迎です!!</p>
-
-		<div class="question" style="width: 320px">京大生以外でも大丈夫ですか？</div>
-					<p class="ans">過去にも京大生以外の方も参加し活動されてました。メカ好きな人達には大学なんか関係ありません！</p>
-				</div>
-			</div>
-
-			<div class="side_bar">
-				<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
-				<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
-					<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
-				</div>
-				<div class="social_bar">
-					<a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
-				</div>
-				<div class="social_bar">
-					<a href="#"><i class="fab fa-facebook"></i>Facebook</a>
-				</div>
-				<div class="social_bar">
-					<a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
-				</div>
-				<div class="social_bar">
-					<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
-				</div>
-			</div>
-		</div>
-
-		<footer>
-			<div id="footer_box">
-				<div id="social_icons">
-					<a href="https://www.youtube.com/user/kikaiken">
-					<i class="fab fa-youtube faa-tada animated-hover"></i>
-				</a>
-					<a href="https://twitter.com/mechatrocreator">
-					<i class="fab fa-twitter faa-tada animated-hover"></i>
-				</a>
-					<a href="#">
-					<i class="fab fa-facebook faa-tada animated-hover"></i>
-				</a>
-					<a href="http://kikaiken.blogspot.jp/">
-					<i class="fab fa-blogger faa-tada animated-hover"></i>
-				</a>
-					<a href="https://github.com/kikaiken">
-					<i class="fab fa-github faa-tada animated-hover"></i>
-				</a>
-				</div>
-
-				<div class="siteMap_box">
-					<p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
-					<ul>
-						<li><a href="index.html">TOP</a></li>
-						<li><a href="forFreshmans.html">新歓情報</a></li>
-						<li><a href="introduction.html">サークル紹介</a></li>
-						<li><a href="activities.html">活動内容</a></li>
-						<!-- <li><a href="members.html">メンバー紹介</a></li> -->
-						<li><a href="results.html">活動成績</a></li>
-					</ul>
-				</div>
-
-				<div class="siteMap_box">
-					<p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
-					<ul>
-						<li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
-						<li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
-						<li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
-					</ul>
-				</div>
-
-				<div class="Qbox">
-					<p><i class="far fa-envelope fa-color: white fa-fw"></i>
-						Contact us<br/>kikaiken[at]gmail.com
-					</p>
-				</div>
-
-				<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
-			</div>
-		</footer>
-	</body>
+	</footer>
+</body>
 
 </html>
