--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<header>
-		<h1>京大機械研究会</h1>
+		<h1><a href="index.html">京大機械研究会</a></h1>
 		<div class="bar_menu_box">
 			<div class="bar_menu">menu</div>
 			<ul>
@@ -47,38 +47,19 @@
 		</div>
 	</div>
 
-		<h3>最新情報</h3>
-	<div class="container_100" style="margin:50px 0px">
-
-		<p>京大機械研はNHK学生ロボコンに15年振りに出場し、初優勝を収めることができました。その模様は7月15日(月・祝)(海の日)にNHK総合で放送されます</p>
-	</div>
-
-	<!--box menu-->
-	<div class="container_100">
-		<a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
-			<p class="mini_box">新歓情報</p>
-			<a/>
-			<a href="introduction.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/tracers.jpg)">
-				<p class="mini_box">サークル紹介</p>
-			</a>
-	</div>
-
-	<div class="container_100">
-		<a href="activities.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/peacockRobo.jpg)">
-			<p class="mini_box">活動内容</p>
-		</a>
-		<a href="members.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/member.jpg)">
-			<p class="mini_box">メンバー紹介</p>
-		</a>
-	</div>
+	<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/widget_iframe.4f8aea4342a4ada72cba2bdffcff6b4d.html?origin=http%3A%2F%2Fwww.kikaiken.org" title="Twitter settings iframe" style="display: none;"></iframe>
 
 	<!--New Topics. Please update frequently!!-->
 	<div class="new_info">
 		<p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
 		<ul>
 			<li>
-	<div class="date">2019/06/02</div>
-	<div class="info_title"><a href="activities.html">NHKロボコン2019初優勝しました。</a></div>
+				<div class="date">2019/09/02</div>
+				<div class="info_title">ABUロボコン2019で８強となりました。</div>
+			</li>
+			<li>
+				<div class="date">2019/06/02</div>
+				<div class="info_title"><a href="activities.html">NHKロボコン2019初優勝しました。</a></div>
 			</li>
 			<li>
 				<div class="date">2019/04/08</div>
@@ -111,25 +92,45 @@
 		</ul>
 	</div>
 
+	<!--box menu-->
+	<div class="container_100">
+		<a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
+			<p class="mini_box">新歓情報</p>
+			<a/>
+			<a href="introduction.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/tracers.jpg)">
+				<p class="mini_box">サークル紹介</p>
+			</a>
+	</div>
+
+	<div class="container_100">
+		<a href="activities.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/peacockRobo.jpg)">
+			<p class="mini_box">活動内容</p>
+		</a>
+	</div>
+
+
 	<footer>
 		<!--social icons menu-->
 		<div id="footer_box">
 			<div id="social_icons">
 				<a href="https://www.youtube.com/user/kikaiken">
-				<i class="fab fa-youtube faa-tada animated-hover"></i>
-			</a>
+					<i class="fab fa-youtube faa-tada animated-hover"></i>
+				</a>
 				<a href="https://twitter.com/mechatrocreator">
-				<i class="fab fa-twitter faa-tada animated-hover"></i>
-			</a>
+					<i class="fab fa-twitter faa-tada animated-hover"></i>
+				</a>
 				<a href="#"> <!--insert facebook acconut-->
-				<i class="fab fa-facebook faa-tada animated-hover"></i>
-			</a>
+					<i class="fab fa-facebook faa-tada animated-hover"></i>
+				</a>
 				<a href="http://kikaiken.blogspot.jp/">
-				<i class="fab fa-blogger faa-tada animated-hover"></i>
-			</a>
+					<i class="fab fa-blogger faa-tada animated-hover"></i>
+				</a>
 				<a href="https://github.com/kikaiken">
-				<i class="fab fa-github faa-tada animated-hover"></i>
-			</a>
+					<i class="fab fa-github faa-tada animated-hover"></i>
+				</a>
+				<a href="https://gitlab.com/kikaiken">
+					<i class="fab fa-gitlab faa-tada animated-hover"></i>
+				</a>
 			</div>
 
 			<!--contents-->
@@ -163,7 +164,7 @@
 				</p>
 			</div>
 
-			<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
+			<address>Copyright(C)2020 kikaiken Allright Reserved.</address>
 		</div>
 	</footer>
 </body>
