--- a/members.html
+++ b/members.html
@@ -16,18 +16,18 @@
 
 <body>
 	<header>
-			<h1>京大機械研究会</h1>
-			<div class="bar_menu_box">
-				<div class="bar_menu">menu</div>
-				<ul>
-					<li class="bar_menu"><a href="index.html">TOP</a></li>
-					<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
-					<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
-					<li class="bar_menu"><a href="activities.html">活動内容</a></li>
-					<li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
-					<li class="bar_menu"><a href="results.html">活動成績</a></li>
-				</ul>
-			</div>
+		<h1><a href="index.html">京大機械研究会</a></h1>
+		<div class="bar_menu_box">
+			<div class="bar_menu">menu</div>
+			<ul>
+				<li class="bar_menu"><a href="index.html">TOP</a></li>
+				<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
+				<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
+				<li class="bar_menu"><a href="activities.html">活動内容</a></li>
+				<li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+				<li class="bar_menu"><a href="results.html">活動成績</a></li>
+			</ul>
+		</div>
 	</header>
 
 	<div id="header">
@@ -99,6 +99,9 @@
 				<a href="https://github.com/kikaiken">
 					<i class="fab fa-github faa-tada animated-hover"></i>
 				</a>
+				<a href="https://gitlab.com/kikaiken">
+					<i class="fab fa-gitlab faa-tada animated-hover"></i>
+				</a>
 			</div>
 
 			<div class="siteMap_box">
@@ -132,7 +135,7 @@
 			-->
 			</div>
 
-			<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
+			<address>Copyright(C)2020 kikaiken Allright Reserved.</address>
 		</div>
 	</footer>
 </body>
