--- a/introduction.html
+++ b/introduction.html
@@ -17,7 +17,7 @@
 
 <body>
 	<header>
-		<h1>京大機械研究会</h1>
+		<h1><a href="index.html">京大機械研究会</a></h1>
 		<div class="bar_menu_box">
 			<div class="bar_menu">menu</div>
 			<ul>
@@ -80,6 +80,9 @@
 			<div class="social_bar">
 				<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
 			</div>
+			<div class="social_bar">
+				<a href="https://gitlab.com/kikaiken"><i class="fab fa-gitlab"></i>Gitlab</a>
+			</div>
 		</div>
 	</div>
 
@@ -100,6 +103,9 @@
 				</a>
 				<a href="https://github.com/kikaiken">
 					<i class="fab fa-github faa-tada animated-hover"></i>
+				</a>
+				<a href="https://gitlab.com/kikaiken">
+					<i class="fab fa-gitlab faa-tada animated-hover"></i>
 				</a>
 			</div>
 
@@ -130,7 +136,7 @@
 				</p>
 			</div>
 
-			<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
+			<address>Copyright(C)2020 kikaiken Allright Reserved.</address>
 		</div>
 	</footer>
 </body>
