--- a/results.html
+++ b/results.html
@@ -22,18 +22,18 @@
 
 <body>
 	<header>
-			<h1>京大機械研究会</h1>
-			<div class="bar_menu_box">
-				<div class="bar_menu">menu</div>
-				<ul>
-					<li class="bar_menu"><a href="index.html">TOP</a></li>
-					<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
-					<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
-					<li class="bar_menu"><a href="activities.html">活動内容</a></li>
-					<!-- <li class="bar_menu"><a href="members.html">メンバー紹介</a></li> -->
-					<li class="bar_menu"><a href="results.html">活動成績</a></li>
-				</ul>
-			</div>
+		<h1><a href="index.html">京大機械研究会</a></h1>
+		<div class="bar_menu_box">
+			<div class="bar_menu">menu</div>
+			<ul>
+				<li class="bar_menu"><a href="index.html">TOP</a></li>
+				<li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
+				<li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
+				<li class="bar_menu"><a href="activities.html">活動内容</a></li>
+				<!-- <li class="bar_menu"><a href="members.html">メンバー紹介</a></li> -->
+				<li class="bar_menu"><a href="results.html">活動成績</a></li>
+			</ul>
+		</div>
 	</header>
 
 	<div id="header">
@@ -43,57 +43,61 @@
 		</div>
 	</div>
 
-<div class="wrapper">
-	<div class="cover">
-		<div class="table_box">
-			<h2>活動成績</h2>
-			<table border="1">
-				<tr><th>年度</th><th>大会名</th><th>受賞</th></tr>
-	<tr><td>2019</td><td>NHK学生ロボコン2019</td><td>優勝</td></tr>
-	<tr><td>2018</td><td>第8回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
-	<tr><td rowspan="4">2017</td><td>第七回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
-				<tr><td rowspan="3">第38回全日本マイクロマウス大会</td><td>5位入賞</td></tr>
-				<tr><td>特別賞</td></tr>
-				<tr><td>8位</td></tr>
-				<tr><td>2016</td><td>第六回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
-				<tr><td rowspan="2">2015</td><td>第五回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
-				<tr><td>第36回全日本マイクロマウス</td><td>優勝</td></tr>
-				<tr><td rowspan="3">2014</td><td rowspan="2">第26回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-				<tr><td>ロボット学会会長特別賞</td></tr>
-				<tr><td>第35回全日本マイクロマウス大会</td><td>準優勝</td></tr>
-				<tr><td>2010</td><td>第22回知能ロボットコンテスト</td><td>テクニカルコース準優勝</td></tr>
-				<tr><td>2009</td><td>第一回国際イノベーションコンテスト</td><td>2nd Prize</td></tr>
-				<tr><td rowspan="2">2008</td><td rowspan="2">第20回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-				<tr><td>ロボット学会会長賞</td></tr>
-				<tr><td rowspan="2">2007</td><td rowspan="2">第19回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-				<tr><td>ロボット学会会長賞</td></tr>
-				<tr><td>2005</td><td>第五回レスキューロボットコンテスト</td><td>ロボット工学奨励賞</td></tr>
-				<tr><td>2004</td><td>第四回レスキューロボットコンテスト</td><td>ベストロボット賞</td></tr>
-				<tr><td rowspan="2">2003</td><td rowspan="2">第15回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-				<tr><td>チャレンジ技術賞</td></tr>
-				<tr><td>2002</td><td>第14回知能ロボットコンテスト</td><td>ロボット学会会長賞</td></tr>
-			</table>
+	<div class="wrapper">
+		<div class="cover">
+			<div class="table_box">
+				<h2>活動成績</h2>
+				<table border="1">
+					<tr><th>年度</th><th>大会名</th><th>受賞</th></tr>
+					<tr><td rowspan="2">2019</tdrowspan="2"><td>ABUロボコン2019</td><td>８強</td></tr>
+					<tr><td>NHK学生ロボコン2019</td><td>優勝</td></tr>
+					<tr><td>2018</td><td>第8回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
+					<tr><td rowspan="4">2017</td><td>第七回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
+					<tr><td rowspan="3">第38回全日本マイクロマウス大会</td><td>5位入賞</td></tr>
+					<tr><td>特別賞</td></tr>
+					<tr><td>8位</td></tr>
+					<tr><td>2016</td><td>第六回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
+					<tr><td rowspan="2">2015</td><td>第五回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
+					<tr><td>第36回全日本マイクロマウス</td><td>優勝</td></tr>
+					<tr><td rowspan="3">2014</td><td rowspan="2">第26回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+					<tr><td>ロボット学会会長特別賞</td></tr>
+					<tr><td>第35回全日本マイクロマウス大会</td><td>準優勝</td></tr>
+					<tr><td>2010</td><td>第22回知能ロボットコンテスト</td><td>テクニカルコース準優勝</td></tr>
+					<tr><td>2009</td><td>第一回国際イノベーションコンテスト</td><td>2nd Prize</td></tr>
+					<tr><td rowspan="2">2008</td><td rowspan="2">第20回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+					<tr><td>ロボット学会会長賞</td></tr>
+					<tr><td rowspan="2">2007</td><td rowspan="2">第19回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+					<tr><td>ロボット学会会長賞</td></tr>
+					<tr><td>2005</td><td>第五回レスキューロボットコンテスト</td><td>ロボット工学奨励賞</td></tr>
+					<tr><td>2004</td><td>第四回レスキューロボットコンテスト</td><td>ベストロボット賞</td></tr>
+					<tr><td rowspan="2">2003</td><td rowspan="2">第15回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+					<tr><td>チャレンジ技術賞</td></tr>
+					<tr><td>2002</td><td>第14回知能ロボットコンテスト</td><td>ロボット学会会長賞</td></tr>
+				</table>
+			</div>
+		</div>
+		<div class="side_bar">
+			<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
+			<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
+				<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
+			</div>
+			<div class="social_bar">
+				<a href="#"><i class="fab fa-facebook"></i>Facebook</a>
+			</div>
+			<div class="social_bar">
+				<a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
+			</div>
+			<div class="social_bar">
+				<a href="https://gitlab.com/kikaiken"><i class="fab fa-gitlab"></i>Gitlab</a>
+			</div>
 		</div>
 	</div>
-	<div class="side_bar">
-		<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
-		<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
-			<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
-		</div>
-		<div class="social_bar">
-			<a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
-		</div>
-		<div class="social_bar">
-			<a href="#"><i class="fab fa-facebook"></i>Facebook</a>
-		</div>
-		<div class="social_bar">
-			<a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
-		</div>
-		<div class="social_bar">
-			<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
-		</div>
-	</div>
-</div>
 
 	<footer>
 		<div id="footer_box">
@@ -112,6 +116,9 @@
 				</a>
 				<a href="https://github.com/kikaiken">
 					<i class="fab fa-github faa-tada animated-hover"></i>
+				</a>
+				<a href="https://gitlab.com/kikaiken">
+					<i class="fab fa-gitlab faa-tada animated-hover"></i>
 				</a>
 			</div>
 
@@ -142,7 +149,7 @@
 				</p>
 			</div>
 
-			<address>Copyright(C)2019 kikaiken Allright Reserved.</address>
+			<address>Copyright(C)2020 kikaiken Allright Reserved.</address>
 		</div>
 	</footer>
 
