#add results in container index.html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 		<a href="activities.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/peacockRobo.jpg)">
 			<p class="mini_box">活動内容</p>
 		</a>
+		<a href="results.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/DSC_0244.JPG)">
+			<p class="mini_box">活動成績</p>
+		</a>
 	</div>
 
 
