#delete facebook #update open in newtab

--- a/index.html
+++ b/index.html
@@ -116,22 +116,19 @@
 		<!--social icons menu-->
 		<div id="footer_box">
 			<div id="social_icons">
-				<a href="https://www.youtube.com/user/kikaiken">
+				<a href="https://www.youtube.com/user/kikaiken" target="_blank">
 					<i class="fab fa-youtube faa-tada animated-hover"></i>
 				</a>
-				<a href="https://twitter.com/mechatrocreator">
+				<a href="https://twitter.com/mechatrocreator" target="_blank">
 					<i class="fab fa-twitter faa-tada animated-hover"></i>
 				</a>
-				<a href="#"> <!--insert facebook acconut-->
-					<i class="fab fa-facebook faa-tada animated-hover"></i>
-				</a>
-				<a href="http://kikaiken.blogspot.jp/">
+				<a href="http://kikaiken.blogspot.jp/" target="_blank">
 					<i class="fab fa-blogger faa-tada animated-hover"></i>
 				</a>
-				<a href="https://github.com/kikaiken">
+				<a href="https://github.com/kikaiken" target="_blank">
 					<i class="fab fa-github faa-tada animated-hover"></i>
 				</a>
-				<a href="https://gitlab.com/kikaiken">
+				<a href="https://gitlab.com/kikaiken" target="_blank">
 					<i class="fab fa-gitlab faa-tada animated-hover"></i>
 				</a>
 			</div>
