--- a/introduction.html
+++ b/introduction.html
@@ -66,22 +66,19 @@
 		<div class="side_bar">
 			<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
 			<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
-				<a href="https://www.youtube.com/user/kikaiken"><i class="fab fa-youtube"></i>YouTube</a>
+				<a href="https://www.youtube.com/user/kikaiken" target="_blank"><i class="fab fa-youtube"></i>YouTube</a>
 			</div>
 			<div class="social_bar">
-				<a href="https://twitter.com/mechatrocreator"><i class="fab fa-twitter"></i>Twitter</a>
+				<a href="https://twitter.com/mechatrocreator" target="_blank"><i class="fab fa-twitter"></i>Twitter</a>
 			</div>
 			<div class="social_bar">
-				<a href="#"><i class="fab fa-facebook"></i>Facebook</a>
+				<a href="http://kikaiken.blogspot.jp/" target="_blank"><i class="fab fa-blogger"></i>Blogger</a>
 			</div>
 			<div class="social_bar">
-				<a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
+				<a href="https://github.com/kikaiken" target="_blank"><i class="fab fa-github"></i>GitHub</a>
 			</div>
 			<div class="social_bar">
-				<a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
-			</div>
-			<div class="social_bar">
-				<a href="https://gitlab.com/kikaiken"><i class="fab fa-gitlab"></i>Gitlab</a>
+				<a href="https://gitlab.com/kikaiken" target="_blank"><i class="fab fa-gitlab"></i>GitLab</a>
 			</div>
 		</div>
 	</div>
@@ -89,22 +86,19 @@
 	<footer>
 		<div id="footer_box">
 			<div id="social_icons">
-				<a href="https://www.youtube.com/user/kikaiken">
+				<a href="https://www.youtube.com/user/kikaiken" target="_blank">
 					<i class="fab fa-youtube faa-tada animated-hover"></i>
 				</a>
-				<a href="https://twitter.com/mechatrocreator">
+				<a href="https://twitter.com/mechatrocreator" target="_blank">
 					<i class="fab fa-twitter faa-tada animated-hover"></i>
 				</a>
-				<a href="#">
-					<i class="fab fa-facebook faa-tada animated-hover"></i>
-				</a>
-				<a href="http://kikaiken.blogspot.jp/">
+				<a href="http://kikaiken.blogspot.jp/" target="_blank">
 					<i class="fab fa-blogger faa-tada animated-hover"></i>
 				</a>
-				<a href="https://github.com/kikaiken">
+				<a href="https://github.com/kikaiken" target="_blank">
 					<i class="fab fa-github faa-tada animated-hover"></i>
 				</a>
-				<a href="https://gitlab.com/kikaiken">
+				<a href="https://gitlab.com/kikaiken" target="_blank">
 					<i class="fab fa-gitlab faa-tada animated-hover"></i>
 				</a>
 			</div>
