#change top画変更　twitter埋め込み　header fontsize レスポンシブ

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div id="header">
 		<div id="header_box">
 			<p>京大機械研究会<br />
-				<span style="font-style: italic">Creators in Kyoto</span></p>
+				<span style="font-style: italic">Kyoto University Mechatronics Creators</span></p>
 		</div>
 	</div>
 
@@ -46,8 +46,6 @@
 			</p>
 		</div>
 	</div>
-
-	<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/widget_iframe.4f8aea4342a4ada72cba2bdffcff6b4d.html?origin=http%3A%2F%2Fwww.kikaiken.org" title="Twitter settings iframe" style="display: none;"></iframe>
 
 	<!--New Topics. Please update frequently!!-->
 	<div class="new_info">
@@ -106,11 +104,15 @@
 		<a href="activities.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/peacockRobo.jpg)">
 			<p class="mini_box">活動内容</p>
 		</a>
-		<a href="results.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/DSC_0244.JPG)">
+		<a href="results.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/IMG_3428-1.jpg)">
 			<p class="mini_box">活動成績</p>
 		</a>
 	</div>
 
+	<div class="twitter_wrap">
+		<a class="twitter-timeline" data-height="600px" data-width="40%"  href="https://twitter.com/MechatroCreator?ref_src=twsrc%5Etfw">Tweets by MechatroCreator</a>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</div>	
 
 	<footer>
 		<!--social icons menu-->
