#fix 小端末での読みやすい文字サイズ

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>機械研TOP</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>京大機械研究会TOP</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/css.css" rel="stylesheet" type="text/css">
 	<link href="topPageStyle.css" rel="stylesheet">
