--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -44,7 +44,7 @@
 
 				<h2>2019年度新歓期カレンダー</h2>
 				<p>今年の機械研の新歓イベントスケジュールです！</p>
-				<iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="670" height="540" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+				<iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
 				<p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p>
 
 				<h2>サークル紹介</h2>
