--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	</div>
 
 	<div class="twitter_wrap">
-		<a class="twitter-timeline" data-height="600px" data-width="40%"  href="https://twitter.com/MechatroCreator?ref_src=twsrc%5Etfw">Tweets by MechatroCreator</a>
+		<a class="twitter-timeline" data-height="600px" href="https://twitter.com/MechatroCreator?ref_src=twsrc%5Etfw">Tweets by MechatroCreator</a>
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>	
 
