#update footer font-size 画面フィット

--- a/index.html
+++ b/index.html
@@ -162,10 +162,8 @@
 
 			<!--contact us-->
 			<div class="Qbox">
-				<p>
-					<i class="far fa-envelope fa-color: white fa-fw"></i>
-					Contact us<br/>kikaiken[at]gmail.com
-				</p>
+				<p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us</p>
+					kikaiken[at]gmail.com
 			</div>
 
 			<address>Copyright(C)2020 kikaiken Allright Reserved.</address>
