#update header fontsize fit

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<!--picture header. Please change photos-->
 	<div id="header">
 		<div id="header_box">
-			<p>京大機械研究会<br />
-				<span style="font-style: italic">Kyoto University Mechatronics Creators</span></p>
+			<p>京大機械研究会<br>
+			<span style="font-style: italic">Kyoto University Mechatronics Creators</span></p>
 		</div>
 	</div>
 
