--- a/introduction.html
+++ b/introduction.html
@@ -46,12 +46,14 @@
 				</p>
 
 				<h2>活動の方針</h2>
-				<p>　機械研の活動理念は、「自発的なものづくり」です。みづから作りたいものを設定し、それを実現する にはどのような技術、理論が必要かを考えながら、ロボットや作品を製作しています。 また、自分たちが作った作品を学祭やイベントで展示することで、交流も図っています。
+				<p>　機械研の活動理念は、「自発的なものづくり」です。自ら作りたいものを設定し、それを実現する にはどのような技術、理論が必要かを考えながら、ロボットや作品を製作しています。 また、自分たちが作った作品を学祭やイベントで展示することで、交流も図っています。
 				</p>
 
 				<h2>活動場所</h2>
 				<p>　活動場所は、主に西部のBOX棟C105にある工作室で活動しています。<br /> また、週に１回、会員が都合のいい日に例会を行っています。（2019年前期は火曜日の昼休みに例会を行っています）
 				</p>
+
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1455.3655141180993!2d135.77723603901626!3d35.02709925346109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600109555777a239%3A0x8d9acde0ab5c4ff2!2z5Lqs5aSn5qmf5qKw56CU56m25Lya!5e0!3m2!1sja!2sjp!4v1581224250221!5m2!1sja!2sjp" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
 				<h2>機械研の特徴</h2>
 				<p>機械研の活動内容は基本的に自由なので、技術系に興味のある人たちがそれぞれ自発的に活動しています。 なので、それぞれ違う得意分野をもった人たちが集まり、日々刺激しあいながら活動しています。
