--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -57,20 +57,20 @@
 				</div>
 
 				<h2>活動場所</h2>
-				<p>京都大学吉田キャンパスの西部棟(ルネの横)のC105で春休み中は毎日午後を中心に活動しています。</p>
+				<p>京都大学吉田キャンパスの西部棟(ルネの横)のC105で午後を中心に活動しています。</p>
 
 				<h2>よくある質問</h2>
-				<div class="question" style="width: 317px">会費はどれくらいかかりますか？</div>
-				<p class="ans">半期5000円です。結構安い!!</p>
+				<div class="question" style="max-width: 317px">会費はどれくらいかかりますか？</div>
+				<p class="ans">半期5000円です。会費は主に備品に回します。</p>
 
-				<div class="question" style="width: 318px">本当に初心者でも大丈夫なの？</div>
-				<p class="ans">もちろん大丈夫です!! 4~5月は新入生講習があります。 7月に新入生ロボコンもあるのでそこでスキルアップもできますよ。
+				<div class="question" style="max-width: 318px">本当に初心者でも大丈夫なの？</div>
+				<p class="ans">もちろん大丈夫です!! 4~6月は新入生講習があります。 6月にある新入生ロボコンに向けてスキルアップできます！
 				</p>
 
-				<div class="question" style="width: 248px">文系でも大丈夫ですか？</div>
+				<div class="question"style="max-width: 248px">文系でも大丈夫ですか？</div>
 				<p class="ans">もちろんです。意欲のある方ならだれでも歓迎です!!</p>
 
-	<div class="question" style="width: 320px">京大生以外でも大丈夫ですか？</div>
+				<div class="question" style="max-width: 320px">京大生以外でも大丈夫ですか？</div>
 				<p class="ans">過去にも京大生以外の方も参加し活動されてました。メカ好きな人達には大学なんか関係ありません！</p>
 			</div>
 		</div>
