--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -42,13 +42,16 @@
 		<div class="cover">
 			<div class="content">
 
-				<h2>2019年度新歓期カレンダー</h2>
+				<h2>2020年度新歓期カレンダー</h2>
 				<p>今年の機械研の新歓イベントスケジュールです！</p>
-				<iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="100%" height="400px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
-				<p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p>
+				<font color=red>訂正：説明会でははんだ付け及びプログラミング体験は行いません。土日のみの実施となります。<br>また、TOEFL実施日4/18に体験会はありません。</font>
+				<img src="./dataFolder/bira2020.png" alt="Schedule">
+				<!-- <iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="100%" height="400px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+				<p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p> -->
+				<p><a href="introduction.html">こちらのページ</a>もご確認ください</p>
 
 				<h2>サークル紹介</h2>
-				<p>私たちは、京都大学機械研究会という大学公認サークルです。</p>
+				<p>京都大学機械研究会という大学公認サークルです。</p>
 				<p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
 				</p>
 				<p>皆で楽しくものづくりライフを楽しみましょう!!</p>
@@ -61,7 +64,7 @@
 
 				<h2>よくある質問</h2>
 				<div class="question" style="max-width: 317px">会費はどれくらいかかりますか？</div>
-				<p class="ans">半期5000円です。会費は主に備品に回します。</p>
+				<p class="ans">半期8000円（新入生は半期5000円）です。会費は主に備品に回します。</p>
 
 				<div class="question" style="max-width: 318px">本当に初心者でも大丈夫なの？</div>
 				<p class="ans">もちろん大丈夫です!! 4~6月は新入生講習があります。 6月にある新入生ロボコンに向けてスキルアップできます！
