--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -44,12 +44,20 @@
 
 				<h2>2020年度新歓期カレンダー</h2>
 				<p>今年の機械研の新歓イベントスケジュールです！</p>
-				<font color=red>訂正：説明会でははんだ付け及びプログラミング体験は行いません。土日のみの実施となります。<br>また、TOEFL実施日4/18に体験会はありません。</font>
+				<font color=red>
+					2020/4/1追記<br>3/31付で学校側から課外活動・新歓活動の自粛要請、及び主たる活動場所の入室規制が発表されました。<br>
+					これに伴い弊サークルは<b>当面の間、新歓活動を見合わせます。</b><br>
+					新歓再開は未定ですが、状況が収まり次第あたらめてご連絡いたします。<br>
+					不明点などありましたら、下記メールアドレスか機械研Twitterまでご連絡ください。<br>
+				</font>
 				<img src="./dataFolder/bira2020.png" alt="Schedule">
 				<!-- <iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="100%" height="400px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
 				<p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p> -->
-				<p><a href="introduction.html">こちらのページ</a>もご確認ください</p>
+				<font color=red>
+					訂正：説明会でははんだ付け及びプログラミング体験は行いません。土日のみの実施となります。<br>また、TOEFL実施日4/18に体験会はありません。
+				</font>
 
+				<p><a href="introduction.html">こちらのページ</a>もご確認ください</p>
 				<h2>サークル紹介</h2>
 				<p>京都大学機械研究会という大学公認サークルです。</p>
 				<p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
