--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 		<p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
 		<ul>
 			<li>
+				<div class="date">2020/05/01</div>
+				<div class="info_title"><a href="forFreshmans.html">オンライン説明会のお知らせ</a></div>
+			</li>
+			<li>
 				<div class="date">2020/04/01</div>
 				<div class="info_title"><a href="forFreshmans.html">新歓延期のお知らせ</a></div>
 			</li>
