#fix header word on topimage

--- a/activities.html
+++ b/activities.html
@@ -33,7 +33,7 @@
 
 	<div id="header">
 		<div id="header_box">
-			<p>京大機械研究会<br />
+			<p>活動内容<br />
 				<span style="font-style: italic">Activities</span></p>
 		</div>
 	</div>
