--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -33,7 +33,7 @@
 
 	<div id="header">
 		<div id="header_box">
-			<p>京大機械研究会<br />
+			<p>新歓情報<br />
 				<span style="font-style: italic">Welcome Event</span></p>
 		</div>
 	</div>
