--- a/introduction.html
+++ b/introduction.html
@@ -33,7 +33,7 @@
 
 	<div id="header">
 		<div id="header_box">
-			<p>京大機械研究会<br />
+			<p>サークル紹介<br />
 				<span style="font-style: italic">Our Introduction</span></p>
 		</div>
 	</div>
