--- a/results.html
+++ b/results.html
@@ -38,7 +38,7 @@
 
 	<div id="header">
 		<div id="header_box">
-			<p>京大機械研究会<br />
+			<p>活動成績<br />
 			<span style="font-style: italic">Results</span></p>
 		</div>
 	</div>
