#add passeord for some error

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -47,6 +47,7 @@
 				昨今の情勢により、京大機械研では、<font color=red>5/9,10(土,日)の14:00</font>からZoomによる説明会及び遠隔体験の案内を行います。<br>
 				ZoomのミーティングIDは画像の通りです。文字では提供しておりません、ご了承ください。
 				<img src="./dataFolder/ZoomURL.jpg" alt="Load Failed">
+				<font color=red>5/10追記　パスワードは4wKwnyです</font>
 
 				<h2>サークル紹介</h2>
 				<p>京都大学機械研究会という大学公認サークルです。</p>
