#update message of online exp

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -43,11 +43,12 @@
 			<div class="content">
 
 				<h2>2020年度新歓情報</h2>
-				<p>オンライン説明会＆遠隔体験始めます！</p>
-				昨今の情勢により、京大機械研では、<font color=red>5/9,10(土,日)の14:00</font>からZoomによる説明会及び遠隔体験の案内を行います。<br>
-				ZoomのミーティングIDは画像の通りです。文字では提供しておりません、ご了承ください。
-				<img src="./dataFolder/ZoomURL.jpg" alt="Load Failed">
-				<font color=red>5/10追記　パスワードは4wKwnyです</font>
+				<p>遠隔体験始めます！</p>
+				機械研では、遠隔で設計などの講習を行っています。<br>
+				下記PDFを読み、仮入会申請フォーム(PDFに記載)から申請してください。
+				<iframe src="dataFolder/機械研活動紹介2020.pdf#page=1&scrollbar=1&view=Fit&pagemode=none" width="100%" height="400px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;">
+					<p><b>表示されない時の表示</b>: <a href="dataFolder/機械研活動紹介2020.pdf">PDF をダウンロード</a>.</p>
+				</iframe>
 
 				<h2>サークル紹介</h2>
 				<p>京都大学機械研究会という大学公認サークルです。</p>
