--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 		<p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
 		<ul>
 			<li>
+				<div class="date">2020/05/10</div>
+				<div class="info_title"><a href="forFreshmans.html">オンライン仮入会・体験のお知らせ</a></div>
+			</li>
+			<li>
 				<div class="date">2020/05/01</div>
 				<div class="info_title"><a href="forFreshmans.html">オンライン説明会のお知らせ</a></div>
 			</li>
@@ -126,7 +130,7 @@
 	<div class="twitter_wrap">
 		<a class="twitter-timeline" data-height="600px" href="https://twitter.com/MechatroCreator?ref_src=twsrc%5Etfw">Tweets by MechatroCreator</a>
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</div>	
+	</div>
 
 	<footer>
 		<!--social icons menu-->
