--- a/results.html
+++ b/results.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -49,6 +49,7 @@
 				<h2>活動成績</h2>
 				<table border="1">
 					<tr><th>年度</th><th>大会名</th><th>受賞</th></tr>
+					<tr><td>2020</td><td>第十回キャチロボコンテスト</td><td>優勝</td></tr>
 					<tr><td rowspan="2">2019</tdrowspan="2"><td>ABUロボコン2019</td><td>８強</td></tr>
 					<tr><td>NHK学生ロボコン2019</td><td>優勝</td></tr>
 					<tr><td>2018</td><td>第8回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
