--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 		<p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
 		<ul>
 			<li>
+				<div class="date">2020/09/30</div>
+				<div class="info_title">キャチロボバトルコンテスト2020 オンラインキャチロボ！で優勝しました。</a></div>
+			</li>
+			<li>
 				<div class="date">2020/05/10</div>
 				<div class="info_title"><a href="forFreshmans.html">オンライン仮入会・体験のお知らせ</a></div>
 			</li>
